@@ -1,6 +1,7 @@
 # Generated by roxygen2 (4.0.2): do not edit by hand
 
 export(c_ua_parse)
+export(cryptohash)
 export(dep_hive_query)
 export(device_classifier)
 export(extract_mcc)
