@@ -1,6 +1,10 @@
 # This file was generated by Rcpp::compileAttributes
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
+c_cryptohash <- function(x, algorithm) {
+    .Call('WMUtils_c_cryptohash', PACKAGE = 'WMUtils', x, algorithm)
+}
+
 #'@title extract_mcc
 #'@description extract a mobile carrier code (mcc) from an x_analytics header
 #'@details \code{\link{extract_mcc}} grabs a mobile carrier code and associated country code
